# Python_course

MyPython/: Class_test.py  Gif_spammer.py  Hello.py  Info.txt  Py_types.py  printage.py
MyPython/Not_a_Balatro_clone(homework1)/: card_game.py
MyPython/Python_tasks/: task_02_1.py  task_02_2.py  task_02_3_unf.py  task_03_1.py
MyPython/Workshop1/: cipher.py
MyPython/final_project/: Readme.txt  collision_handlers.py  display.py  player.py  run_game.py  test.py  test_level.json  tilemap.py  tiles.py
MyPython/homework1 (Not_a_Balatro_clone)/: card_game.py
MyPython/homework2/: gpt_version.py  mgrep.py  test2.txt  test3.txt  test4.txt  test_fil.txt
MyPython/homework3/: TmbdClient.py  client.py  exceptions.py  models.py  tmdb_sdk.py
MyPython/homework3/gemini_try/: explanation.txt  main.py  pyproject.toml
MyPython/homework3/gemini_try/tmdb_sdk/: __init__.py  client.py  exceptions.py  models.py
MyPython/homework3/project/: Pyproject.toml  main.py  tmdb.env
MyPython/homework3/project/tmdb_sdk/: __init__.py  client.py  exceptions.py  models.py
MyPython/homework3/tmdb_sdk/: main.py  pyproject.toml
MyPython/homework3/tmdb_sdk/tmdb_sdk/: __init__.py  client.py  exceptions.py  models.py
