[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "tmdb_sdk"
version = "0.1.0"
description = "A Python SDK for The Movie Database (TMDb) API"
authors = [{name = "Student Name", email = "student@example.com"}]
dependencies = [
    "requests>=2.28.0"
]
requires-python = ">=3.10"